--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,18 +35,14 @@ jobs:
         env:
           PLATFORM_REPO_TOKEN: ${{ secrets.PLATFORM_REPO_TOKEN }}
         run: |
-          # Clone platform repo
-          git clone https://oauth2:${PLATFORM_REPO_TOKEN}@github.com/Mustafa-wr/Kubernetes-Platform-Engineering.git platform
+          # Clone platform repo with token
+          git clone https://x-access-token:${PLATFORM_REPO_TOKEN}@github.com/Mustafa-wr/Kubernetes-Platform-Engineering.git platform
           
           cd platform
           
-          # Update ONLY the image.tag value using awk for precision
-          awk -v sha="${{ github.sha }}" '
-            /name: image.tag/ { found=1; print; next }
-            found && /value:/ { print "          value: " sha; found=0; next }
-            { print }
-          ' Falcon-Platform/gitops/apps/sample-flask.yaml > temp.yaml && \
-          mv temp.yaml Falcon-Platform/gitops/apps/sample-flask.yaml
+          # Update the image.tag value (find image.tag line and update the next value line)
+          sed -i '/name: image.tag/{n;s/value: .*/value: ${{ github.sha }}/}' \
+            Falcon-Platform/gitops/apps/sample-flask.yaml
           
           # Commit and push
           git config user.name "GitHub Actions Bot"
